# mc-server-pinger

./: .dockerignore  .gitignore  .mergify.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  lints.yml  release.yml  test.yml
src/: clap_support.rs  duration.rs  main.rs  output_flavor.rs
