[package]
name = "mc-server-pinger"
version = "0.1.0-alpha.4"
authors = ["Petr Portnov <me@progrm-jarvis.ru>"]
edition = "2018"
# Basic properties
description = "Command line utility for pinging Minecraft servers via Server List Ping protocol"
license = "Apache-2.0"
repository = "https://github.com/JarvisCraft/mc-server-pinger"
# crates.io search metadata
keywords = ["minecraft", "ping"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
craftping = { version = "0.2.1", features = ["async-tokio"] }
tokio = { version = "1.10.1", features = ["rt", "time", "macros"] }
clap = "3.0.0-beta.4"
peg = "0.7.0"

[profile.release]
# This allows a better optimized binary at cost of more complicated compilation
# which is fine and worth it
lto = true
# This minimizes build parallelization bu allows better optimizations
codegen-units = 1
# This is a single-purpose binary which has no space for panic
# thus even if it (somehow) makes it way to production is not as critical
panic = "abort"
